--- a/main.html
+++ b/main.html
@@ -15,7 +15,7 @@
     <header class="bg-success text-white p-3 fixed-top">
         <div class="container d-flex justify-content-between align-items-center">
             <!-- Ссылка на домашнюю страницу с логотипом -->
-            <a href="main.html" class="navbar-brand">
+            <a href="index.html" class="navbar-brand">
                 <img src="logo1.png" alt="Logo" height="50">
             </a>
             <div class="infa">
@@ -30,7 +30,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="main.html">Главная</a>
+                            <a class="nav-link text-white" href="index.html">Главная</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-white" href="semester1.html">Первый семестр</a>
@@ -61,7 +61,7 @@
 
     <!-- Основное содержимое страницы -->
     <div class="container mt-5 pt-5">
-        <h1 class="main-heading text-center text-success mb-4">Добро пожаловать на мой сайт</h1>
+        <h1 class="index-heading text-center text-success mb-4">Добро пожаловать на мой сайт</h1>
         <section class="mb-4">
             <p class="text-paragraph">Меня зовут Овчаренко Константин Сергеевич и я начинающий специалист по веб-разработке.</p>
             <img src="logo1.png" alt="User Image" class="img-fluid rounded shadow">
